--- a/docker/images/nginx/Dockerfile
+++ b/docker/images/nginx/Dockerfile
@@ -4,7 +4,7 @@ FROM nginx:1.27
 LABEL org.opencontainers.image.authors="Yoda team"
 
 RUN apt update && \
-    apt install -y git vim \
+    apt install -y git vim procps \
     && apt-get -q clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -13,6 +13,11 @@ ADD nginx.site.part2 /etc/nginx/nginx.site.part2
 ADD nginx.site.part-mailpit /etc/nginx/nginx.site.part-mailpit
 RUN rm /etc/nginx/conf.d/default.conf
 ADD cd2.cnf /etc/certificates/cd2.cnf
+
+# Static content for Anubis
+RUN mkdir -p /etc/anubis/static-content
+ADD cd2-logo.png /etc/anubis/static-content/cd2-logo.png
+
 ADD nginx-entrypoint.sh /nginx-entrypoint.sh
 RUN chmod +x /nginx-entrypoint.sh
 CMD ["/nginx-entrypoint.sh"]
